--- a/templates/pages/about.templ
+++ b/templates/pages/about.templ
@@ -1,7 +1,9 @@
-package pages
+package pagetemplates
+
+import "github.com/tonymmm1/go-htmx/templates/layouts"
 
 templ About() {
-	@Layout() {
+	@layouts.Layout() {
 		<div class="container mx-auto px-4 py-8">
 			<div class="prose lg:prose-xl mx-auto">
 				<h1>About This Project</h1>
