--- a/templates/pages/index.templ
+++ b/templates/pages/index.templ
@@ -1,7 +1,9 @@
-package pages
+package pagetemplates
+
+import "github.com/tonymmm1/go-htmx/templates/layouts"
 
 templ Index() {
-	@Layout() {
+	@layouts.Layout() {
 		<div class="hero min-h-screen bg-base-200">
 			<div class="hero-content text-center">
 				<div class="max-w-md">
